--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@supabase/supabase-js": "^2.42.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.4.41",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "prettier": "3.2.5",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
