--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.4",
     "framer-motion": "^11.1.5",
+    "framer-motion-3d": "^11.1.7",
     "next": "14.2.1",
+    "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "sonner": "^1.4.41",
+    "three": "^0.164.0",
     "yup": "^1.4.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
