--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-three/fiber": "^8.16.2",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.4",
+    "flubber": "^0.4.2",
     "framer-motion": "^11.1.7",
     "framer-motion-3d": "^11.1.7",
+    "motion": "^10.17.0",
     "next": "14.2.1",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
