--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.4",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
@@ -25,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "sonner": "^1.4.41",
+    "styled-components": "^6.1.9",
     "three": "^0.164.0",
     "yup": "^1.4.0",
     "zod": "^3.22.4",
