--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^8.16.2",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.4",
+    "colorthief": "^2.4.0",
     "emoji-mart": "^5.6.0",
     "flubber": "^0.4.2",
     "framer-motion": "^11.1.7",
