--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.3.30",
     "framer-motion-3d": "^11.3.30",
     "motion": "^10.18.0",
+    "motion-number": "^0.1.6",
     "next": "14.2.6",
     "popmotion": "^11.0.5",
     "react": "^18.3.1",
