--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
-    "prettier": "3.3.3",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.4"
   }
 }
