--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.9.0",
+    "@number-flow/react": "^0.4.4",
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.6",
     "@supabase/ssr": "^0.5.0",
@@ -19,9 +20,7 @@
     "emoji-mart": "^5.6.0",
     "emoji-palette": "^0.0.3",
     "flubber": "^0.4.2",
-    "framer-motion": "^11.3.30",
-    "framer-motion-3d": "^11.3.30",
-    "motion": "^10.18.0",
+    "motion": "^11.15.0",
     "motion-number": "^0.1.6",
     "next": "14.2.6",
     "popmotion": "^11.0.5",
