--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@emoji-mart/data": "^1.2.1",
     "@hookform/resolvers": "^3.9.1",
     "@number-flow/react": "^0.4.4",
