--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@emoji-mart/data": "^1.2.1",
     "@hookform/resolvers": "^3.9.1",
     "@number-flow/react": "^0.4.4",
@@ -35,6 +36,7 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "webpack": "^5.97.1"
   }
 }
