--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@number-flow/react": "^0.4.4",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
+    "@types/flubber": "^0.4.0",
     "emoji-mart": "^5.6.0",
     "emoji-palette": "^0.0.3",
     "flubber": "^0.4.2",
