--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.1",
+    "use-debounce": "^10.0.4",
     "uuid": "^11.0.4",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
