--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "motion": "^11.15.0",
     "next": "14.2.6",
     "react": "^18.3.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.1",
