--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "motion": "^11.15.0",
     "next": "14.2.6",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-swipeable": "^7.0.2",
     "sonner": "^1.7.1",
     "use-debounce": "^10.0.4",
     "uuid": "^11.0.4",
