--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "emoji-palette": "^0.0.3",
     "flubber": "^0.4.2",
     "immer": "^10.1.1",
+    "js-cookie": "^3.0.5",
     "motion": "^11.15.0",
     "next": "14.2.6",
     "react": "^18.3.1",
