--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "emoji-mart": "^5.6.0",
     "emoji-palette": "^0.0.3",
     "flubber": "^0.4.2",
+    "grapheme-splitter": "^1.0.4",
     "immer": "^10.1.1",
     "js-cookie": "^3.0.5",
     "motion": "^11.15.0",
