--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grapheme-splitter": "^1.0.4",
     "immer": "^10.1.1",
     "js-cookie": "^3.0.5",
+    "lodash-es": "^4.17.21",
     "motion": "^12.23.12",
     "next": "14.2.6",
     "react": "^18.3.1",
@@ -40,6 +41,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
