--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@serwist/build": "^9.2.1",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.17.2",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "prettier": "^3.3.3",
+    "serwist": "^9.2.1",
     "typescript": "^5.5.4",
     "webpack": "^5.98.0"
   }
