fix(pwa): fix pwa resolution and serviceworkers

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emoji-mart/data": "^1.2.1",
     "@hookform/resolvers": "^3.9.1",
     "@number-flow/react": "^0.4.4",
+    "@serwist/next": "^9.2.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@types/flubber": "^0.4.0",
