--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sonner": "^1.7.1",
     "use-debounce": "^10.0.4",
     "uuid": "^11.0.4",
+    "web-push": "^3.6.7",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
@@ -47,6 +48,7 @@
     "@types/node": "^22.17.2",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/web-push": "^3.6.4",
     "prettier": "^3.3.3",
     "serwist": "^9.2.1",
     "typescript": "^5.5.4",
