--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -43,7 +45,12 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
     "@serwist/build": "^9.2.1",
+    "@storybook/addon-a11y": "^9.1.5",
+    "@storybook/addon-docs": "^9.1.5",
+    "@storybook/addon-onboarding": "^9.1.5",
+    "@storybook/addon-vitest": "^9.1.5",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.17.2",
     "@types/react": "^18.3.4",
@@ -51,7 +58,13 @@
     "@types/web-push": "^3.6.4",
     "prettier": "^3.3.3",
     "serwist": "^9.2.1",
+    "storybook": "^9.1.5",
     "typescript": "^5.5.4",
-    "webpack": "^5.98.0"
+    "webpack": "^5.98.0",
+    "@storybook/nextjs-vite": "^9.1.5",
+    "vitest": "^3.2.4",
+    "@vitest/browser": "^3.2.4",
+    "playwright": "^1.55.0",
+    "@vitest/coverage-v8": "^3.2.4"
   }
 }
