--- a/package.json
+++ b/package.json
@@ -51,20 +51,20 @@
     "@storybook/addon-docs": "^9.1.5",
     "@storybook/addon-onboarding": "^9.1.5",
     "@storybook/addon-vitest": "^9.1.5",
+    "@storybook/nextjs-vite": "^9.1.5",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.17.2",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/web-push": "^3.6.4",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "playwright": "^1.55.0",
     "prettier": "^3.3.3",
     "serwist": "^9.2.1",
     "storybook": "^9.1.5",
     "typescript": "^5.5.4",
-    "webpack": "^5.98.0",
-    "@storybook/nextjs-vite": "^9.1.5",
     "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.55.0",
-    "@vitest/coverage-v8": "^3.2.4"
+    "webpack": "^5.98.0"
   }
 }
