--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^8.0.6",
     "react-swipeable": "^7.0.2",
     "sonner": "^1.7.1",
     "use-debounce": "^10.0.4",
