--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-calendar": "^5.1.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^8.0.6",
     "react-swipeable": "^7.0.2",
@@ -57,6 +58,7 @@
     "@types/node": "^22.17.2",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/react-grid-layout": "^1.3.5",
     "@types/web-push": "^3.6.4",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
