--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.54.2",
     "react-markdown": "^8.0.6",
     "react-swipeable": "^7.0.2",
+    "simplebar-react": "^3.3.2",
     "sonner": "^1.7.1",
     "use-debounce": "^10.0.4",
     "uuid": "^11.0.4",
